tests/fixtures/errors/bare_view_binding.z
# E0300: a borrowed view cannot be constructed from its bare name.
main: function is {
    sv: StringView
    print "\{sv.length}"
}
